# FayeCpp

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  Doxyfile  FayeCpp+OpenSSL.podspec  FayeCpp.podspec  LICENSE  NewInCMake.txt  README.md  appveyor.yml  client.cpp  client.h  common.h  delegate.h  fayecpp.h  fayecpp.pri  fayecpp_config.h.in  fayecpp_test.pri  getifaddrs-patch.patch  jansson_msc_1900.patch  libwebsockets_h.patch  message.cpp  message.h  travis.sh  variant.cpp  variant.h
.travis/: configure.sh  make.sh
builds/android/: config.h  fayecpp_config.h  getdtablesize.c  jansson_config.h  jansson_private_config.h  lws_config.h  lws_config_private.h
builds/android/jni/: Android+SSL.mk  Android.mk  Android_DEBUG.mk  Application.mk
builds/android/sys/: syslog.h
builds/android/test_app/TestFayeCpp/: .project  AndroidManifest.xml
builds/android/test_app/TestFayeCpp/jni/: Android.mk  Application.mk  TestFayeCpp.h  fayecpp.h  testfayecpp.cpp
builds/ios/: build_ios_framework.sh  build_ios_framework_ssl.sh  fayecpp_config.h  jansson_config.h  jansson_private_config.h  lws_config.h  lws_config_private.h
builds/ios-with-openssl/: build_ios_framework.sh  fayecpp_config.h  lws_config.h  lws_config_private.h
builds/ios-with-openssl/fayecpp.xcodeproj/: project.pbxproj
builds/ios/fayecpp.xcodeproj/: project.pbxproj
builds/ios/test_faye_static/test_faye_static/: AppDelegate.h  AppDelegate.m  Info.plist  ViewController.h  ViewController.mm  main.m
builds/ios/test_faye_static/test_faye_static.xcodeproj/: project.pbxproj
builds/ios/test_faye_static/test_faye_static/Base.lproj/: LaunchScreen.xib  Main.storyboard
builds/ios/test_faye_static_swift/: TestFayeSw copy-Info.plist
builds/ios/test_faye_static_swift/TestFayeSw/: AppDelegate.swift  TestFayeSw-Bridging-Header.h  ViewController.swift
builds/ios/test_faye_static_swift/TestFayeSw.xcodeproj/: project.pbxproj
builds/ios/test_faye_static_swift/TestFayeSwTests/: TestFayeSwTests.swift
builds/mac/: fayecpp_config.h  jansson_config.h  lws_config.h  lws_config_private.h
builds/mac/test_mac/test_mac/: AppDelegate.h  AppDelegate.mm  main.m  test_mac-Info.plist
builds/mac/test_mac/test_mac.xcodeproj/: project.pbxproj
builds/mac/test_mac/test_macTests/: test_macTests.m
builds/mac/test_mac_openssl/test_mac/: main.m
builds/mac/test_mac_openssl/test_macTests/: test_mac_opensslTests-Info.plist
builds/mac/test_mac_openssl/test_mac_openssl.xcodeproj/: project.pbxproj
builds/qt/: jansson_config.h
builds/qt/test_app/: mainwindow.cpp  mainwindow.h  mainwindow.ui  test_app.pro
builds/windows-mingw/: inet_ntop.c  mstcpip.h
contrib/objc/: FayeCppClient.h  FayeCppClient.mm
contrib/objc/FayeCpp.bundle/: FayeCpp-Info.plist
contrib/objc/FayeCpp.bundle/en.lproj/: FayeCppLocalizable.strings
contrib/objc/FayeCpp.bundle/ru.lproj/: FayeCppLocalizable.strings
contrib/objc/FayeCpp.bundle/uk.lproj/: FayeCppLocalizable.strings
contribute/android/: fayecpp_config.h  jansson_config.h  lws_config.h
contribute/android/jni/: Android.mk
contribute/ios/: fayecpp_config.h  jansson_private_config.h
contribute/ios/fayecpp.xcodeproj/: project.pbxproj
doc/html/: _faye_cpp_client_8h.html  _faye_cpp_client_8h_source.html  _faye_cpp_client_8mm.html  _faye_cpp_client_8mm.js  _faye_cpp_client_8mm_source.html  _r_e_buffer_8cpp.html  _r_e_buffer_8cpp_source.html  _r_e_buffer_no_copy_8cpp.html  _r_e_buffer_no_copy_8cpp_source.html  _r_e_log_8cpp.html  _r_e_log_8cpp_source.html  _r_e_mutable_string_8cpp.html  _r_e_mutable_string_8cpp_source.html  _r_e_mutex_8cpp.html  _r_e_mutex_8cpp_source.html  _r_e_mutex_8h.html  _r_e_mutex_8h_source.html  _r_e_static_string_8cpp.html  _r_e_static_string_8cpp_source.html  _r_e_string_8cpp.html  _r_e_string_8cpp_source.html  _r_e_string_base_8cpp.html  _r_e_string_base_8cpp_source.html  _r_e_string_list_8cpp.html  _r_e_string_list_8cpp_source.html  _r_e_string_utils_private_8cpp.html  _r_e_string_utils_private_8cpp_source.html  _r_e_string_utils_private_8h.html  _r_e_string_utils_private_8h_source.html  _r_e_thread_8cpp.html  _r_e_thread_8cpp.js  _r_e_thread_8cpp_source.html  _r_e_thread_8h.html  _r_e_thread_8h_source.html  _r_e_time_8cpp.html  _r_e_time_8cpp_source.html  _r_e_wide_string_8cpp.html  _r_e_wide_string_8cpp_source.html  annotated.html  annotated.js  (+227 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+64 more)
private/: REBuffer.cpp  REBuffer.h  REList.h  REMutex.cpp  REMutex.h  REPtr.h  REString.cpp  REStringBase.cpp  REStringList.cpp  REStringUtilsPrivate.cpp  REThread.cpp  REThread.h  classmethodwrapper.h  jsonutils.cpp  jsonutils.h  transport.cpp  transport.h  variantlist.cpp  variantmap.cpp  websocket.cpp  websocket.h  websocketqt.cpp  websocketqt.h
src/: FCAdvice.cpp  FCClassMethodWrapper.h  FCClient.cpp  FCError.cpp  FCJsonUtils.cpp  FCJsonUtils.h  FCMessage.cpp  FCTransport.cpp  FCTransport.h  FCWebSocket.cpp  FCWebSocket.h  FCWebSocketQt.cpp  FCWebSocketQt.h  REBuffer.cpp  REBufferNoCopy.cpp  RELog.cpp  REMutableString.cpp  REMutex.cpp  REMutex.h  REStaticString.cpp  REString.cpp  REStringBase.cpp  REStringList.cpp  REStringUtilsPrivate.cpp  REStringUtilsPrivate.h  REThread.cpp  REThread.h  REThreadingPrivate.cpp  REThreadingPrivate.h  RETime.cpp  REVariant.cpp  REVariantList.cpp  REVariantMap.cpp  REWideString.cpp  classmethodwrapper.h  client.cpp  error.cpp  jsonutils.cpp  jsonutils.h  message.cpp  (+9 more)
test/: CMakeLists.txt  dbuploader.c  dbuploader.cpp  test.cpp  test1.cpp  test_creation.cpp  test_fayecpp_connect.cpp  test_fayecpp_header.cpp  test_fayecpp_init.cpp  test_fayecpp_variantmessage.cpp  test_header.cpp
(+8 files in other folders)
