#
#   Copyright 2012 - 2014 Kulykov Oleh
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.
#

cmake_minimum_required(VERSION 2.8)

project(fayecpp)

INCLUDE(CheckLibraryExists)
INCLUDE(CheckFunctionExists)

INCLUDE(CheckIncludeFile)
INCLUDE(CheckIncludeFileCXX)

INCLUDE(CheckTypeSize)
INCLUDE(CheckSymbolExists)

INCLUDE(CheckCCompilerFlag)
INCLUDE(CheckCXXCompilerFlag)


# C with -fPIC
check_c_compiler_flag("-fPIC" WITH_FPIC_C)
if(WITH_FPIC_C)
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
endif(WITH_FPIC_C)


# CXX with -fPIC
check_cxx_compiler_flag("-fPIC" WITH_FPIC_CXX)
if(WITH_FPIC_CXX)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
endif(WITH_FPIC_CXX)


if(MSVC)
	# Suppress warning about "deprecated" functions
	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_CRT_SECURE_NO_WARNINGS")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_CRT_SECURE_NO_WARNINGS")
endif(MSVC)


add_definitions(-DCMAKE_BUILD)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

message("Looking for libwebsockets...")
find_package(LIBWEBSOCKETS QUIET)
if(NOT LIBWEBSOCKETS_FOUND)
message("libwebsockets not found, using bundled copy.")
add_subdirectory(libwebsockets)
list(APPEND LIBWEBSOCKETS_INCLUDE_DIRS
			${CMAKE_CURRENT_SOURCE_DIR}/libwebsockets/lib
			${CMAKE_BINARY_DIR}/libwebsockets/lib
			${CMAKE_BINARY_DIR}/libwebsockets
)
set(LIBWEBSOCKETS_FOUND 1)
endif()
message("libwebsockets include dirs: ${LIBWEBSOCKETS_INCLUDE_DIRS}")
message("libwebsockets libraries: ${LIBWEBSOCKETS_LIBRARIES}")
include_directories(${LIBWEBSOCKETS_INCLUDE_DIRS})
set(HAVE_LIBWEBSOCKETS_H 1)


message("Looking for jansson...")
find_package(JANSSON QUIET)
if(NOT JANSSON_FOUND)
message("jansson not found, using bundled copy.")
add_subdirectory(jansson)
list(APPEND JANSSON_INCLUDE_DIRS
			${CMAKE_CURRENT_SOURCE_DIR}/jansson/src
			${CMAKE_BINARY_DIR}/jansson/include
)
set(JANSSON_FOUND 1)
endif()
message("jansson include dirs: ${JANSSON_INCLUDE_DIRS}")
message("jansson libraries: ${JANSSON_LIBRARIES}")
include_directories(${JANSSON_INCLUDE_DIRS})
set(HAVE_JANSSON_H 1)


#if (NOT WIN32 AND (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX))
#   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
#endif() 



CHECK_INCLUDE_FILE("stdlib.h" HAVE_STDLIB_H)
if(HAVE_STDLIB_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES stdlib.h)
endif(HAVE_STDLIB_H)

CHECK_INCLUDE_FILE("inttypes.h" HAVE_INTTYPES_H)
if(HAVE_INTTYPES_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES inttypes.h)
endif(HAVE_INTTYPES_H)

CHECK_INCLUDE_FILE("sys/types.h" HAVE_SYS_TYPES_H)
if(HAVE_SYS_TYPES_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES sys/types.h)
endif(HAVE_SYS_TYPES_H)

CHECK_INCLUDE_FILE("stddef.h" HAVE_STDDEF_H)
if(HAVE_STDDEF_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES stddef.h)
endif(HAVE_STDDEF_H)

CHECK_INCLUDE_FILE("stdbool.h" HAVE_STDBOOL_H)
if(HAVE_STDBOOL_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES stdbool.h)
endif(HAVE_STDBOOL_H)

CHECK_INCLUDE_FILE("stdint.h" HAVE_STDINT_H)
if(HAVE_STDINT_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES stdint.h)
endif(HAVE_STDINT_H)

CHECK_INCLUDE_FILE("stdarg.h" HAVE_STDARG_H)
if(HAVE_STDARG_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES stdarg.h)
endif(HAVE_STDARG_H)

CHECK_INCLUDE_FILE("limits.h" HAVE_LIMITS_H)
if(HAVE_LIMITS_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES limits.h)
endif(HAVE_LIMITS_H)

CHECK_INCLUDE_FILE("float.h" HAVE_FLOAT_H)
if(HAVE_FLOAT_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES float.h)
endif(HAVE_FLOAT_H)

CHECK_INCLUDE_FILE("math.h" HAVE_MATH_H)
if(HAVE_MATH_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES math.h)
endif(HAVE_MATH_H)

CHECK_INCLUDE_FILE("wchar.h" HAVE_WCHAR_H)
if(HAVE_WCHAR_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES wchar.h)
endif(HAVE_WCHAR_H)

CHECK_INCLUDE_FILE("malloc.h" HAVE_MALLOC_H)
if(HAVE_MALLOC_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES malloc.h)
endif(HAVE_MALLOC_H)

CHECK_INCLUDE_FILE("memory.h" HAVE_MEMORY_H)
if(HAVE_MEMORY_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES memory.h)
endif(HAVE_MEMORY_H)

CHECK_INCLUDE_FILE("string.h" HAVE_STRING_H)
if(HAVE_STRING_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES string.h)
endif(HAVE_STRING_H)


CHECK_INCLUDE_FILE("mach/mach_time.h" HAVE_MACH_MACH_TIME_H)
CHECK_INCLUDE_FILE("sys/time.h" HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILE("time.h" HAVE_TIME_H)
CHECK_INCLUDE_FILE("locale.h" HAVE_LOCALE_H)
CHECK_INCLUDE_FILE("assert.h" HAVE_ASSERT_H)

CHECK_INCLUDE_FILE("sys/stat.h" HAVE_SYS_STAT_H)
if(HAVE_SYS_STAT_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES sys/stat.h)
endif(HAVE_SYS_STAT_H)

CHECK_INCLUDE_FILE("fcntl.h" HAVE_FCNTL_H)
CHECK_INCLUDE_FILE("pthread.h" HAVE_PTHREAD_H)
CHECK_INCLUDE_FILE("sys/resource.h" HAVE_SYS_RESOURCE_H)

CHECK_INCLUDE_FILE("direct.h" HAVE_DIRECT_H)
if(HAVE_DIRECT_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES direct.h)
endif(HAVE_DIRECT_H)

CHECK_INCLUDE_FILE("byteswap.h" HAVE_BYTESWAP_H)

CHECK_INCLUDE_FILE("errno.h" HAVE_ERRNO_H)
if(HAVE_ERRNO_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES errno.h)
endif(HAVE_ERRNO_H)

CHECK_INCLUDE_FILE("sys/errno.h" HAVE_SYS_ERRNO_H)
if(HAVE_SYS_ERRNO_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES sys/errno.h)
endif(HAVE_SYS_ERRNO_H)

CHECK_INCLUDE_FILE("io.h" HAVE_IO_H)
if(HAVE_IO_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES io.h)
endif(HAVE_IO_H)

CHECK_INCLUDE_FILE("signal.h" HAVE_SIGNAL_H)
CHECK_INCLUDE_FILE("setjmp.h" HAVE_SETJMP_H)

CHECK_INCLUDE_FILE("unistd.h" HAVE_UNISTD_H)
if(HAVE_UNISTD_H)
	LIST(APPEND CMAKE_EXTRA_INCLUDE_FILES unistd.h)
endif(HAVE_UNISTD_H)

CHECK_INCLUDE_FILE("dispatch/dispatch.h" HAVE_DISPATCH_DISPATCH_H)

MESSAGE(CMAKE_EXTRA_INCLUDE_FILES ": " ${CMAKE_EXTRA_INCLUDE_FILES})

# To check the size of a primitive type:
CHECK_TYPE_SIZE("void*" SIZEOF_VOIDP_T)
IF(SIZEOF_VOIDP_T AND (NOT VOIDP_TYPE))
	SET(VOIDP_TYPE void*)
ENDIF()

CHECK_TYPE_SIZE("int8_t" SIZEOF_INT8_T)
IF(SIZEOF_INT8_T AND (NOT INT8_TYPE))
	SET(INT8_TYPE int8_t)
ENDIF()

CHECK_TYPE_SIZE("uint8_t" SIZEOF_UINT8_T)
IF(SIZEOF_UINT8_T AND (NOT UINT8_TYPE))
	SET(UINT8_TYPE uint8_t)
ENDIF()

CHECK_TYPE_SIZE("u_int8_t" SIZEOF_U_INT8_T)
IF(SIZEOF_U_INT8_T AND (NOT UINT8_TYPE))
	SET(UINT8_TYPE u_int8_t)
ENDIF()

CHECK_TYPE_SIZE("int16_t" SIZEOF_INT16_T)
IF(SIZEOF_INT16_T AND (NOT INT16_TYPE))
	SET(INT16_TYPE int16_t)
ENDIF()

CHECK_TYPE_SIZE("uint16_t" SIZEOF_UINT16_T)
IF(SIZEOF_UINT16_T AND (NOT UINT16_TYPE))
	SET(UINT16_TYPE uint16_t)
ENDIF()

CHECK_TYPE_SIZE("u_int16_t" SIZEOF_U_INT16_T)
IF(SIZEOF_U_INT16_T AND (NOT UINT16_TYPE))
	SET(UINT16_TYPE u_int16_t)
ENDIF()

CHECK_TYPE_SIZE("int32_t" SIZEOF_INT32_T)
IF(SIZEOF_INT32_T AND (NOT INT32_TYPE))
	SET(INT32_TYPE int32_t)
ENDIF()

CHECK_TYPE_SIZE("uint32_t" SIZEOF_UINT32_T)
IF(SIZEOF_UINT32_T AND (NOT UINT32_TYPE))
	SET(UINT32_TYPE uint32_t)
ENDIF()

CHECK_TYPE_SIZE("int64_t" SIZEOF_INT64_T)
IF(SIZEOF_INT64_T AND (NOT INT64_TYPE))
	SET(INT64_TYPE int64_t)
ENDIF()

CHECK_TYPE_SIZE("uint64_t" SIZEOF_UINT64_T)
IF(SIZEOF_UINT64_T AND (NOT UINT64_TYPE))
	SET(UINT64_TYPE uint64_t)
ENDIF()

CHECK_TYPE_SIZE("u_int64_t" SIZEOF_U_INT64_T)
IF(SIZEOF_U_INT64_T AND (NOT UINT64_TYPE))
	SET(UINT64_TYPE u_int64_t)
ENDIF()

CHECK_TYPE_SIZE("uintptr_t" SIZEOF_UINTPTR_T)
IF(SIZEOF_UINTPTR_T AND (NOT UINTPTR_TYPE))
	SET(UINTPTR_TYPE uintptr_t)
ENDIF()


CHECK_TYPE_SIZE("char" SIZEOF_CHAR)
IF(SIZEOF_CHAR AND (NOT INT8_TYPE))
	SET(INT8_TYPE char)
ENDIF()

CHECK_TYPE_SIZE("unsigned char" SIZEOF_UNSIGNED_CHAR)
IF(SIZEOF_UNSIGNED_CHAR AND (NOT UINT8_TYPE))
	SET(UINT8_TYPE "unsigned char")
ENDIF()

CHECK_TYPE_SIZE("short" SIZEOF_SHORT)
IF(SIZEOF_SHORT AND (NOT INT16_TYPE) AND (SIZEOF_SHORT EQUAL 2))
	SET(INT16_TYPE short)
ENDIF()

CHECK_TYPE_SIZE("unsigned short" SIZEOF_UNSIGNED_SHORT)
IF(SIZEOF_UNSIGNED_SHORT AND (NOT UINT16_TYPE) AND (SIZEOF_UNSIGNED_SHORT EQUAL 2))
	SET(UINT16_TYPE "unsigned short")
ENDIF()

CHECK_TYPE_SIZE("int" SIZEOF_INT)
IF(SIZEOF_INT AND (NOT INT32_TYPE) AND (SIZEOF_INT EQUAL 4))
	SET(INT32_TYPE int)
ENDIF()

CHECK_TYPE_SIZE("unsigned int" SIZEOF_UNSIGNED_INT)
IF(SIZEOF_UNSIGNED_INT AND (NOT UINT32_TYPE) AND (SIZEOF_UNSIGNED_INT EQUAL 4))
	SET(UINT32_TYPE "unsigned int")
ENDIF()

CHECK_TYPE_SIZE("long int" SIZEOF_LONG_INT)
IF(SIZEOF_LONG_INT AND (SIZEOF_LONG_INT EQUAL 4) AND (NOT INT32_TYPE))
	SET(INT32_TYPE "long int")
ENDIF()
IF(SIZEOF_LONG_INT AND (SIZEOF_LONG_INT EQUAL 8) AND (NOT INT64_TYPE))
	SET(INT64_TYPE "long int")
ENDIF()


CHECK_TYPE_SIZE("unsigned long int" SIZEOF_UNSIGNED_LONG_INT)
IF(SIZEOF_UNSIGNED_LONG_INT AND (SIZEOF_UNSIGNED_LONG_INT EQUAL 4) AND (NOT UINT32_TYPE))
	SET(UINT32_TYPE "unsigned long int")
ENDIF()
IF(SIZEOF_UNSIGNED_LONG_INT AND (SIZEOF_UNSIGNED_LONG_INT EQUAL 8) AND (NOT UINT64_TYPE))
	SET(UINT64_TYPE "unsigned long int")
ENDIF()

CHECK_TYPE_SIZE("long long int" SIZEOF_LONG_LONG_INT)
IF(SIZEOF_LONG_LONG_INT AND (SIZEOF_LONG_LONG_INT EQUAL 4) AND (NOT INT32_TYPE))
	SET(INT32_TYPE "long long int")
ENDIF()
IF(SIZEOF_LONG_LONG_INT AND (SIZEOF_LONG_LONG_INT EQUAL 8) AND (NOT INT64_TYPE))
	SET(INT64_TYPE "long long int")
ENDIF()

CHECK_TYPE_SIZE("unsigned long long int" SIZEOF_UNSIGNED_LONG_LONG_INT)
IF(SIZEOF_UNSIGNED_LONG_LONG_INT AND (SIZEOF_UNSIGNED_LONG_LONG_INT EQUAL 4) AND (NOT UINT32_TYPE))
	SET(UINT32_TYPE "unsigned long long int")
ENDIF()
IF(SIZEOF_UNSIGNED_LONG_LONG_INT AND (SIZEOF_UNSIGNED_LONG_LONG_INT EQUAL 8) AND (NOT UINT64_TYPE))
	SET(UINT64_TYPE "unsigned long long int")
ENDIF()


CHECK_TYPE_SIZE("float_t" SIZEOF_FLOAT_T)
IF(SIZEOF_FLOAT_T AND (NOT FLOAT32_TYPE) AND (SIZEOF_FLOAT_T EQUAL 4))
	SET(FLOAT32_TYPE float_t)
ENDIF()

CHECK_TYPE_SIZE("double_t" SIZEOF_DOUBLE_T)
IF(SIZEOF_DOUBLE_T AND (NOT FLOAT64_TYPE) AND (SIZEOF_DOUBLE_T EQUAL 8))
	SET(FLOAT32_TYPE double_t)
ENDIF()

CHECK_TYPE_SIZE("long double_t" SIZEOF_LONG_DOUBLE_T)
IF(SIZEOF_LONG_DOUBLE_T AND (NOT FLOAT64_TYPE) AND (SIZEOF_LONG_DOUBLE_T EQUAL 8))
	SET(FLOAT64_TYPE "long double_t")
ENDIF()
IF(SIZEOF_LONG_DOUBLE_T AND (NOT FLOAT128_TYPE) AND (SIZEOF_LONG_DOUBLE_T EQUAL 16))
	SET(FLOAT128_TYPE "long double_t")
	SET(HAVE_FLOAT128 1)
ENDIF()

CHECK_TYPE_SIZE("float" SIZEOF_FLOAT)
IF(SIZEOF_FLOAT AND (NOT FLOAT32_TYPE) AND (SIZEOF_FLOAT EQUAL 4))
	SET(FLOAT32_TYPE float)
ENDIF()

CHECK_TYPE_SIZE("double" SIZEOF_DOUBLE)
IF(SIZEOF_DOUBLE AND (NOT FLOAT64_TYPE) AND (SIZEOF_DOUBLE EQUAL 8))
	SET(FLOAT32_TYPE double)
ENDIF()

CHECK_TYPE_SIZE("long double" SIZEOF_LONG_DOUBLE)
IF(SIZEOF_LONG_DOUBLE AND (NOT FLOAT64_TYPE) AND (SIZEOF_LONG_DOUBLE EQUAL 8))
	SET(FLOAT64_TYPE "long double")
ENDIF()
IF(SIZEOF_LONG_DOUBLE AND (NOT FLOAT128_TYPE) AND (SIZEOF_LONG_DOUBLE EQUAL 16))
	SET(FLOAT128_TYPE "long double")
	SET(HAVE_FLOAT128 1)
ENDIF()

CHECK_TYPE_SIZE("bool" SIZEOF_BOOL)
IF(SIZEOF_BOOL)
	SET(BOOL_TYPE bool)
ENDIF()

CHECK_TYPE_SIZE("__int128_t" SIZEOF___INT128_T)
IF(SIZEOF___INT128_T AND (NOT INT128_TYPE) AND (SIZEOF___INT128_T EQUAL 16))
	SET(INT128_TYPE __int128_t)
ENDIF()
CHECK_TYPE_SIZE("int128_t" SIZEOF_INT128_T)
IF(SIZEOF_INT128_T AND (NOT INT128_TYPE) AND (SIZEOF_INT128_T EQUAL 16))
	SET(INT128_TYPE int128_t)
ENDIF()

CHECK_TYPE_SIZE("__uint128_t" SIZEOF___UINT128_T)
IF(SIZEOF___UINT128_T AND (NOT UINT128_TYPE) AND (SIZEOF___UINT128_T EQUAL 16))
	SET(UINT128_TYPE __uint128_t)
ENDIF()
CHECK_TYPE_SIZE("uint128_t" SIZEOF_UINT128_T)
IF(SIZEOF_UINT128_T AND (NOT UINT128_TYPE) AND (SIZEOF_UINT128_T EQUAL 16))
	SET(UINT128_TYPE uint128_t)
ENDIF()

IF(INT128_TYPE AND UINT128_TYPE)
	SET(HAVE_INTEGERS128 1)
ENDIF()


IF(SIZEOF_VOIDP_T EQUAL 4)
	SET(__RE_32BIT_PLATFORM__ 1)
ENDIF()
IF(SIZEOF_VOIDP_T EQUAL 8)
	SET(__RE_64BIT_PLATFORM__ 1)
ENDIF()

CHECK_TYPE_SIZE("struct stat" SIZEOF_STRUCT_STAT)
IF(SIZEOF_STRUCT_STAT)
	SET(HAVE_STRUCT_STAT 1)
ENDIF()

CHECK_TYPE_SIZE("struct _stat" SIZEOF_STRUCT__STAT)
IF(SIZEOF_STRUCT__STAT)
	SET(HAVE_STRUCT__STAT 1)
ENDIF()


# functions
check_function_exists(posix_memalign HAVE_FUNCTION_POSIX_MEMALIGN)
check_function_exists(usleep HAVE_FUNCTION_USLEEP)
check_function_exists(getrlimit HAVE_FUNCTION_GETRLIMIT)

check_function_exists(pthread_attr_setscope HAVE_FUNCTION_PTHREAD_ATTR_SETSCOPE)
check_function_exists(pthread_attr_setstacksize HAVE_FUNCTION_PTHREAD_ATTR_SETSTACKSIZE)
check_function_exists(pthread_cancel HAVE_FUNCTION_PTHREAD_CANCEL)
check_function_exists(pthread_setname_np HAVE_FUNCTION_PTHREAD_SETNAME_NP)
check_function_exists(pthread_set_name_np HAVE_FUNCTION_PTHREAD_SET_NAME_NP)

check_function_exists(_stat HAVE_FUNCTION__STAT)
check_function_exists(stat HAVE_FUNCTION_STAT)
check_function_exists(_wstat HAVE_FUNCTION__WSTAT)
check_function_exists(access HAVE_FUNCTION_ACCESS)
check_function_exists(_access HAVE_FUNCTION__ACCESS)
check_function_exists(_waccess HAVE_FUNCTION__WACCESS)
check_function_exists(_mkdir HAVE_FUNCTION__MKDIR)
check_function_exists(mkdir HAVE_FUNCTION_MKDIR)
check_function_exists(_wmkdir HAVE_FUNCTION__WMKDIR)
check_function_exists(clock_gettime HAVE_FUNCTION_CLOCK_GETTIME)
check_function_exists(fabsf HAVE_FUNCTION_FABSF)
check_function_exists(fabs HAVE_FUNCTION_FABS)
check_function_exists(floorf HAVE_FUNCTION_FLOORF)
check_function_exists(floor HAVE_FUNCTION_FLOOR)
check_function_exists(powf HAVE_FUNCTION_POWF)
check_function_exists(pow HAVE_FUNCTION_POW)
check_function_exists(cosf HAVE_FUNCTION_COSF)
check_function_exists(cos HAVE_FUNCTION_COS)
check_function_exists(sinf HAVE_FUNCTION_SINF)
check_function_exists(sin HAVE_FUNCTION_SIN)
check_function_exists(sqrtf HAVE_FUNCTION_SQRTF)
check_function_exists(sqrt HAVE_FUNCTION_SQRT)
check_function_exists(_wfopen HAVE_FUNCTION__WFOPEN)
check_function_exists(_wfopen_s HAVE_FUNCTION__WFOPEN_S)
check_function_exists(fopen_s HAVE_FUNCTION_FOPEN_S)
check_function_exists(sscanf_s HAVE_FUNCTION_SSCANF_S)
check_function_exists(sprintf_s HAVE_FUNCTION_SPRINTF_S)
check_function_exists(vsnprintf HAVE_FUNCTION_VSNPRINTF)
check_function_exists(vsprintf_s HAVE_FUNCTION_VSPRINTF_S)

check_function_exists(clock_gettime HAVE_FUNCTION_CLOCK_GETTIME)
check_function_exists(difftime HAVE_FUNCTION_DIFFTIME)
check_function_exists(time HAVE_FUNCTION_TIME)
check_function_exists(localtime HAVE_FUNCTION_LOCALTIME)
check_function_exists(gmtime HAVE_FUNCTION_GMTIME)
check_function_exists(strftime HAVE_FUNCTION_STRFTIME)

check_function_exists(dispatch_sync HAVE_FUNCTION_DISPATCH_SYNC)
check_function_exists(dispatch_async HAVE_FUNCTION_DISPATCH_ASYNC)
check_function_exists(dispatch_get_global_queue HAVE_FUNCTION_DISPATCH_GET_GLOBAL_QUEUE)
check_function_exists(dispatch_after HAVE_FUNCTION_DISPATCH_AFTER)


SET(__FAYECPP_HAVE_CONFIG__ 1)


if(NOT DEFINED CMAKE_INSTALL_LIBDIR)
	set(CMAKE_INSTALL_LIBDIR lib)
endif(NOT DEFINED CMAKE_INSTALL_LIBDIR)

set(prefix ${CMAKE_INSTALL_PREFIX})
set(libdir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})

configure_file("${PROJECT_SOURCE_DIR}/fayecpp_config.h.in" 
				"${PROJECT_BINARY_DIR}/fayecpp_config.h")

# Now make sure that you the the build directory on your "Include" path when compiling
include_directories(${PROJECT_BINARY_DIR})



set(FAYECPP_SOURCES	src/client.cpp
		src/jsonutils.cpp
		src/message.cpp
		src/REBuffer.cpp
		src/REBufferNoCopy.cpp
		src/RELog.cpp
		src/REMutableString.cpp
		src/REStaticString.cpp
		src/REString.cpp
		src/REStringBase.cpp
		src/REStringList.cpp
		src/REStringUtilsPrivate.cpp
		src/REWideString.cpp
		src/transport.cpp
		src/variant.cpp
		src/variantlist.cpp
		src/variantmap.cpp
		src/websocket.cpp
				)
				

set(FAYECPP_HEADERS 	fayecpp.h
				fayecpp_config.h)

add_definitions(-DHAVE_FAYECPP_CONFIG_H)


#ADD_LIBRARY(fayecpp STATIC ${FAYECPP_SOURCES} ${FAYECPP_HEADERS})
ADD_LIBRARY(fayecpp SHARED ${FAYECPP_SOURCES} ${FAYECPP_HEADERS})

add_dependencies(fayecpp websockets jansson)

target_link_libraries(fayecpp websockets)
target_link_libraries(fayecpp jansson)

install(TARGETS fayecpp DESTINATION lib)
install(FILES fayecpp.h DESTINATION include)


